syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.example.gccoffee";

service productService{
  rpc findAll (FindAllProductRequest) returns (FindAllProductResponse);
  rpc findById (FindProductByIdRequest) returns (FindOneProductResponse);
  rpc findByName (FindProductByNameRequest) returns (FindOneProductResponse);
}

message ProductMessage{
  string productId = 1;
  string productName = 2;
  string category = 3;
  string description = 4;
  int64 price = 5;
  int32 quantity = 6;
}

message FindAllProductRequest{

}
message FindAllProductResponse{
  repeated ProductMessage product = 1;
}

message FindProductByIdRequest{
  string productId = 1;
}
message FindProductByNameRequest{
  string productName = 1;
}
message FindOneProductResponse{
  ProductMessage product = 1;
}



